// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TODOアプリ タスクの入力 1`] = `
"<!DOCTYPE html><html><head>
    <meta charset=\\"utf-8\\">
    <link rel=\\"stylesheet\\" href=\\"./css/style.css\\">
    <title>TODO</title>
  <style type=\\"text/css\\">
span[data-v-a5c1973e] {
  font-weight: bold;
  font-size: 1.2rem;
}
</style><style type=\\"text/css\\">
span[data-v-20403811] {
  font-size: 0.8em;
}
</style></head>
  <body>
    <button id=\\"addTodo\\">タスクを追加する</button>
    <div id=\\"todoList\\" style=\\"\\"><div class=\\"todo\\"><input type=\\"text\\"><button class=\\"delete\\">削除</button></div><div class=\\"todo\\"><input type=\\"text\\"><button class=\\"delete\\">削除</button></div></div>
    <div id=\\"todoEmpty\\" style=\\"display: none;\\">タスクがありません</div>
    <div>
      <span data-v-a5c1973e=\\"\\" id=\\"nextTodo\\">次のTODO: サンプルタスク1</span>
      <span data-v-20403811=\\"\\" id=\\"todoCount\\">(全2件)</span>
    </div>
    <script src=\\"./dist/main.js\\"></script>
   

</body></html>"
`;

exports[`TODOアプリ タスクの削除 1`] = `
"<!DOCTYPE html><html><head>
    <meta charset=\\"utf-8\\">
    <link rel=\\"stylesheet\\" href=\\"./css/style.css\\">
    <title>TODO</title>
  <style type=\\"text/css\\">
span[data-v-a5c1973e] {
  font-weight: bold;
  font-size: 1.2rem;
}
</style><style type=\\"text/css\\">
span[data-v-20403811] {
  font-size: 0.8em;
}
</style></head>
  <body>
    <button id=\\"addTodo\\">タスクを追加する</button>
    <div id=\\"todoList\\" style=\\"display: none;\\"></div>
    <div id=\\"todoEmpty\\" style=\\"\\">タスクがありません</div>
    <div>
      <span data-v-a5c1973e=\\"\\" id=\\"nextTodo\\">次のTODO: (未登録)</span>
      <span data-v-20403811=\\"\\" id=\\"todoCount\\">(全0件)</span>
    </div>
    <script src=\\"./dist/main.js\\"></script>
   

</body></html>"
`;

exports[`TODOアプリ タスクの追加 1`] = `
"<!DOCTYPE html><html><head>
    <meta charset=\\"utf-8\\">
    <link rel=\\"stylesheet\\" href=\\"./css/style.css\\">
    <title>TODO</title>
  <style type=\\"text/css\\">
span[data-v-a5c1973e] {
  font-weight: bold;
  font-size: 1.2rem;
}
</style><style type=\\"text/css\\">
span[data-v-20403811] {
  font-size: 0.8em;
}
</style></head>
  <body>
    <button id=\\"addTodo\\">タスクを追加する</button>
    <div id=\\"todoList\\" style=\\"\\"><div class=\\"todo\\"><input type=\\"text\\"><button class=\\"delete\\">削除</button></div><div class=\\"todo\\"><input type=\\"text\\"><button class=\\"delete\\">削除</button></div></div>
    <div id=\\"todoEmpty\\" style=\\"display: none;\\">タスクがありません</div>
    <div>
      <span data-v-a5c1973e=\\"\\" id=\\"nextTodo\\">次のTODO: </span>
      <span data-v-20403811=\\"\\" id=\\"todoCount\\">(全2件)</span>
    </div>
    <script src=\\"./dist/main.js\\"></script>
   

</body></html>"
`;

exports[`TODOアプリ 初期表示 1`] = `
"<!DOCTYPE html><html><head>
    <meta charset=\\"utf-8\\">
    <link rel=\\"stylesheet\\" href=\\"./css/style.css\\">
    <title>TODO</title>
  <style type=\\"text/css\\">
span[data-v-a5c1973e] {
  font-weight: bold;
  font-size: 1.2rem;
}
</style><style type=\\"text/css\\">
span[data-v-20403811] {
  font-size: 0.8em;
}
</style></head>
  <body>
    <button id=\\"addTodo\\">タスクを追加する</button>
    <div id=\\"todoList\\" style=\\"display: none;\\"></div>
    <div id=\\"todoEmpty\\">タスクがありません</div>
    <div>
      <span data-v-a5c1973e=\\"\\" id=\\"nextTodo\\">次のTODO: (未登録)</span>
      <span data-v-20403811=\\"\\" id=\\"todoCount\\">(全0件)</span>
    </div>
    <script src=\\"./dist/main.js\\"></script>
   

</body></html>"
`;
